Rearranged directory in preperation for terraform

--- a/webserver/website.conf
+++ b/webserver/website.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
     ServerAdmin webmaster@localhost
-    DocumentRoot /vagrant/www
-    <Directory /vagrant/www/>
+    DocumentRoot /vagrant/webserver/www
+    <Directory /vagrant/webserver/www/>
         Require all granted
     </Directory>
 
